--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "mongodb": "^6.15.0",
     "multer": "^1.4.5-lts.1"
   }
 }
